--- a/Airline Analysis.ipynb
+++ b/Airline Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,12 +255,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 31 columns are"
+    "This data set has 31 columns of various types:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        " 'YearTenFold']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,8 +309,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of this data is for a single year -- 1987:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +326,7 @@
        "array([1987])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,12 +339,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question:  What's the average distance flown out of SFO on Mondays by carrier?"
+    "# Question\n",
+    "\n",
+    "What's the average distance flown out of SFO on Mondays by carrier in this year (1987)?\n",
+    "\n",
+    "It's easy to find out!  First, we scope down the dataframe to get rid of some excess columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +498,7 @@
        "75  1987     10          10          6            PS     447.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +508,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No we can just look at Mondays (`DayOfWeek == 1`)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,17 +524,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "average_distances = df.groupby(['UniqueCarrier']).mean()"
+    "And computing the averages is easy!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Distance</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UniqueCarrier</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AA</th>\n",
+       "      <td>725.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AS</th>\n",
+       "      <td>679.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CO</th>\n",
+       "      <td>967.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DL</th>\n",
+       "      <td>1416.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PA (1)</th>\n",
+       "      <td>337.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PS</th>\n",
+       "      <td>390.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TW</th>\n",
+       "      <td>701.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UA</th>\n",
+       "      <td>1020.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>US</th>\n",
+       "      <td>2099.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WN</th>\n",
+       "      <td>447.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Distance\n",
+       "UniqueCarrier             \n",
+       "AA              725.000000\n",
+       "AS              679.000000\n",
+       "CO              967.000000\n",
+       "DL             1416.500000\n",
+       "PA (1)          337.000000\n",
+       "PS              390.300000\n",
+       "TW              701.000000\n",
+       "UA             1020.733333\n",
+       "US             2099.000000\n",
+       "WN              447.000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_distances = df.groupby(['UniqueCarrier']).mean()\n",
+    "\n",
+    "average_distances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we'll plot these as a bar chart and export that chart to PNG."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
